# kristforge

./: .gitignore  CMakeLists.txt  cl_amd.h  krist.cpp  krist.h  kristforge.cpp  kristforge.h  kristforge_opencl.cpp  main.cpp
